--- a/Soli3.html
+++ b/Soli3.html
@@ -50,7 +50,7 @@ Soli Muratori si spense a Modena il 29 settembre 1769. In ossequio alle sue volo
 <center><big><big>Frontespizio della <i>Vita del Proposto Lodovico Antonio Muratori</i>, opera pubblicata da Soli Muratori nel 1756.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/vita del proposto.jpg" width="450" height="650"></center><br><br><br>
 <center><big><big>Facciata di Santa Maria della Pomposa</big></big></center><br>
-<center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/facciata.jpg" width="550" height="650"></center><br><br><br>
+<center><img src="img/celebri vignolesi/Soli Muratori Giovanni Francesco/Facciata MODIFICATA.jpg" width="550" height="650"></center><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
