--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -34,7 +34,7 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big>Biglietto autografo di Mario Pellegrini datato 19 febbraio 1937. Collezione privata.</big></big></center></p>
+<p><center><big><big>Biglietto autografo di Mario Pellegrini datato 19 febbraio 1937. Collezione privata.</big></big></center></p>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto1.jpg"><br>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto2.jpg"><br><br>
 <p><center><big><big>Mario Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>.</big></big></center></p>
