--- a/cincia.html
+++ b/cincia.html
@@ -43,8 +43,8 @@ Il cigno, offeso a diritto dall’ironia del discorso, stette per rimbeccarlo op
 Prima di giudicare, considera se hai l’ingegno ed il sapere a tanto!</big></p><br><br><br>
 
 
-<p><big>*Nell’originale, figura qui in apice il numero 1, che rimanda al testo della nota che apre Note, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’<i>Indice</i>. Ecco il testo di tale nota: «Cinciarella. <i>Piccolo uccello, di umore acre, caparbio, litigioso, e che si azzufferebbe con tutti.</i>»<br>
-**Nell’originale, il refuso «ad altre».</big></p><br><br><br>
+<p><big>* Nell’originale, figura qui in apice il numero 1, che rimanda al testo della nota che apre <i>Note</i>, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’<i>Indice</i>. Ecco il testo di tale nota: «Cinciarella. <i>Piccolo uccello, di umore acre, caparbio, litigioso, e che si azzufferebbe con tutti.</i>»<br>
+** Nell’originale, il refuso «ad altre».</big></p><br><br><br>
 
 <p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
