--- a/avvenimento.html
+++ b/avvenimento.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>Un avvenimento antidiluviano</strong></big></big></center></h3><br><br>
 
 
@@ -48,7 +48,7 @@ La volpe scornata si partì, e andò dal leone per sentire a qual pena volesse c
 <p><big>* Nell’originale, l’iniziale maiuscola è presente qui, ma non nelle successive occorrenze del termine.<br>
 ** Nell’originale, questa virgola è assente.</big></p><br><br><br>
 
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
