--- a/cincia.html
+++ b/cincia.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>La cinciarella* ed il cigno</strong></big></big></center></h3><br><br>
 
 <p><big>In un ameno laghetto, ombreggiato di salici piangenti, teneva sua dimora un cigno; e quivi pure costumava una cinciarella a caccia d’insettuzzi ed a godere la frescura del luogo. Per la lunga consuetudine di vedersi, nacque domestichezza tra i due uccelli; onde in ogni giorno tenevano conversazione insieme circa le notizie correnti e altre** cose che fossero di qualche interesse per loro.<br>
@@ -46,7 +46,7 @@ Prima di giudicare, considera se hai l’ingegno ed il sapere a tanto!</big></p>
 <p><big>* Nell’originale, figura qui in apice il numero 1, che rimanda al testo della nota che apre <i>Note</i>, l’elenco delle note, verosimilmente tutte di pugno dell’Autore stesso, inserito subito dopo la fine dell’ultima favola della raccolta e subito prima dell’<i>Indice</i>. Ecco il testo di tale nota: «Cinciarella. <i>Piccolo uccello, di umore acre, caparbio, litigioso, e che si azzufferebbe con tutti.</i>»<br>
 ** Nell’originale, il refuso «ad altre».</big></p><br><br><br>
 
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
