--- a/nuviletto.html
+++ b/nuviletto.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>Il nuviletto e la luna</strong></big></big></center></h3><br><br>
 
 
@@ -37,7 +37,7 @@ E il nuviletto, è oro, topazi, rubini dal lato dove il sole nascente lo ingemma
 La luna frattanto va sbiadendo ed è in sul nascondersi, mentre si accorge della strana illusione in cui venne lo sgraziato, e piamente compassionevole, ripete con fioca voce: ohimè! nuvilo senza consiglio, finché t’illuminasti col mito splendore del mio disco non avesti a temere di andarne disperso; ma ora così non accadrà; il caldo fulgore che ti invermiglia ti sterminerà nelle infinite regioni dell’aere: tu fra poco non sarai più!<br>
 Tali parole non appena furono proferite che il nuvolo ingrato e superbo si dileguò per forza di sole in sottilissima nebbia, e finì senza dar segno di suo vivere, né con una stilla di pioggia, né con un lampeggio di luce che gli fosse propria.</big></p><br><br><br>
 
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
