--- a/pastorecapre.html
+++ b/pastorecapre.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>Il pastore e le capre</strong></big></big></center></h3><br><br>
 
 
@@ -39,7 +39,7 @@ Ohimè il rimedio tornò pienamente a vuoto. Barba o non barba, fame o sazietà,
 
 <p><big>* Nell’originale, qui si legge davvero «mandria», mentre poco prima era stata preferita la forma «mandra».</big></p><br><br><br>
 
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
