--- a/sogno.html
+++ b/sogno.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>Un sogno</strong></big></big></center></h3><br><br>
 
 
@@ -44,7 +44,7 @@ Il brav’uomo alla fine si svegliò, tra il contento che fosse stato un sogno, 
 <p><big>* Nell’originale, il refuso «schricchiolìo».<br>
 ** Nell’originale, questa virgola è assente.</big></p><br><br><br>
 
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
