--- a/usignolo.html
+++ b/usignolo.html
@@ -27,7 +27,7 @@
 </nav>
 </header>
 <section>
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 <h3><center><big><big><strong>L’usignuolo</strong>*</big></big></center></h3><br><br>
 
 
@@ -41,7 +41,7 @@ Ridiscese allora melanconico col nido, coi gusci e colla compagna dell’infelic
 
 <p><big>* Abbiamo preferito questa forma, più coerente, utilizzata nell’Indice finale del volumetto; il titolo qui riportato nell’originale, invece, è «L’Usignolo».</big></p><br><br><br>
   
-<p><big><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
+<p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
 
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
