--- a/Muratori.html
+++ b/Muratori.html
@@ -32,7 +32,7 @@
 <h3><center><big><big>LODOVICO ANTONIO MURATORI</big></big><br><br>
 	<big>(1672-1750)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br><br>
-	<h4><big><big><big><big><strong><center>LASCIAMOGLI LA PAROLA</center></strong></big></big></big></big></h4><br><br>
+	<h4><big><big><big><big><strong><center>LASCIAMO LA PAROLA A MURATORI</center></strong></big></big></big></big></h4><br><br>
 <p><big>Nei brani presenti in questa sezione, si è deciso di conservare inalterate la grafia dei vocaboli e la punteggiatura, e di normalizzare gli accenti alle convenzioni tipografiche odierne.</big></p><br>
 
 <p><big><i><strong>Piacesse anche a Dio, che i giovani volessero e sapessero andar così a testa bassa verso varj purché onesti studj, e impiegar ivi le notti e i giorni: che questo ancora sarebbe una non leggier difesa da molti vizj in quel più periglioso passo della loro vita.</strong></i></big></p>
