--- a/Selmi.html
+++ b/Selmi.html
@@ -118,7 +118,7 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 	<center><img src="img/celebri vignolesi/Selmi/Busto e lapide.jpg" width="390" height="680"></center><br><br>
 	<p><center><big>Lapide commemorativa della cappella funebre di Selmi.</big></center></p><br>
 		<center><img src="img/celebri vignolesi/Selmi/lapide.jpg" width="450" height="700"></center><br><br><br>
-			<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
+			<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
