--- a/Muratori.html
+++ b/Muratori.html
@@ -37,7 +37,7 @@
 
 <p><big><i><strong>Piacesse anche a Dio, che i giovani volessero e sapessero andar così a testa bassa verso varj purché onesti studj, e impiegar ivi le notti e i giorni: che questo ancora sarebbe una non leggier difesa da molti vizj in quel più periglioso passo della loro vita.</strong></i></big></p>
 
-<p><big>Missiva al letterato friulano Giovanni Artico, conte di Porcìa (1682-1743), datata da Modena il 10 novembre 1721: <i>Lettera inedita di Lodovico Antonio Muratori intorno al metodo de’ suoi studi</i>, a cura di L.V. [Luigi Vischi], in <i>Scritti inediti di Lodovico Ant. Muratori pubblicati a celebrare il secondo centenario dalla nascita di lui</i>, 2 parti in 1 vol., In Bologna, Presso Nicola Zanichelli successore alli Marsigli e Rocchi, 1872, <i>Parte prima</i>, pp. 1-31 (I edizione).</big></p><br>
+<p><big>Missiva al letterato friulano Giovanni Artico, conte di Porcìa (1682-1743), datata da Modena il 10 novembre 1721, ma spedita al corrispondente solo nell’aprile dell’anno successivo (dopo varie esitazioni del Vignolese sfociate nel divieto della stampa per il timore che quanto scritto suonasse come eccessivamente autoencomiastico): <i>Lettera inedita di Lodovico Antonio Muratori intorno al metodo de’ suoi studi</i>, a cura di L.V. [Luigi Vischi], in <i>Scritti inediti di Lodovico Ant. Muratori pubblicati a celebrare il secondo centenario dalla nascita di lui</i>, 2 parti in 1 vol., In Bologna, Presso Nicola Zanichelli successore alli Marsigli e Rocchi, 1872, <i>Parte prima</i>, pp. 1-31 (I edizione).</big></p><br>
 
 <p><big>[…] <i><strong>conobbi alle pruove, che l’Uomo, se la Natura gli è alquanto liberale, e se non teme fatica, può far di gran cose.</strong></i></big></p>
 	
