--- a/aprile.html
+++ b/aprile.html
@@ -65,7 +65,7 @@ Nata a Vignola il 9 agosto 1922, Augusta Redorici Roffi svolse la professione di
 Nel 2006 il presidente della Repubblica Italiana la insignì della Benemerenza di Prima Classe per l’Arte, la Scienza e la Cultura.<br><br>
 Nell’immagine sottostante, tomba di Augusta Redorici Roffi e del marito presso il cimitero di Campiglio.</p><br><br>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="450" height="650"><br><br><br>
-<p><strong><big><center>Vuoi saperne di più su Augusta Redorifi Roffi?<br>Allora, visita il suo <a href="Redorici Roffi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
+<p><strong><big><center>Vuoi saperne di più su Augusta Redorici Roffi?<br>Allora, visita il suo <a href="Redorici Roffi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p class="index-p3"><strong>26 aprile 1736</strong>: nacque nella rocca di Vignola <strong>AGOSTINO PARADISI <i>IL GIOVANE</i></strong>, poeta, saggista, traduttore, drammaturgo, storico ed economista.<br><br>  
 
