--- a/aprile.html
+++ b/aprile.html
@@ -34,11 +34,12 @@
 <h3><big><strong>APRILE</strong></big></h3><br><br><br>
 
 <p><big><strong>Aprile 1840</strong>: nel «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80), comparve <i>Canto a Vignola</i>, un poemetto che il giovane <strong>FRANCESCO SELMI</strong> (1807-1881) aveva scritto per celebrare il suo paese natale.<br>
-L’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi; il terzo e il settimo, invece, sono settenari. Lo schema delle rime è ABcBACdD.</big></p><br>
+L’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi; il terzo e il settimo, invece, sono settenari. Lo schema delle rime è ABcBACdD.</big></p>
+ <p><big>Nell’immagine sottostante, l’<i>incipit</i> di <i>Canto a Vignola</i>.</big></p><br>
 <img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="550" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
-  
-<p><big><strong>2 aprile 1954</strong>: morì a Modena <strong>MARIO PELLEGRINI</strong>, alto ufficiale della Marina Militare del Regno d’Italia.<br><br>
+
+ <p><big><strong>2 aprile 1954</strong>: morì a Modena <strong>MARIO PELLEGRINI</strong>, alto ufficiale della Marina Militare del Regno d’Italia.<br><br>
 Nato a Vignola il 7 dicembre 1880, Mario Pellegrini partecipò alla Guerra Italo-Turca (1911-1912) e alla Prima Guerra Mondiale (1915-1918). Ricevette la Croce di Guerra, la Medaglia d’Argento e la Medaglia d’Oro al Valor Militare. Venne promosso capitano di fregata per merito di guerra. Nel 1928, tre anni dopo essere nominato capitano di vascello, lasciò il servizio attivo su sua domanda, poi diventò contrammiraglio nella riserva navale e, infine, ammiraglio di divisione della stessa.<br>
 Il suo paese natale gli ha intitolato la strada che mette in comunicazione diretta l’area della stazione dei treni e l’area del fossato secco che è a ridosso delle ancora esistenti mura di cinta quattrocentesche dell’antico borgo (o castello) di Vignola.<br><br>
 Nell’immagine sottostante, Mario Pellegrini in uniforme. Fonte: sito <a href="https://www.lavocedelmarinaio.com">La voce del marinaio</a>, <i>ad nomen</i>.</p><br>
