--- a/aprile.html
+++ b/aprile.html
@@ -35,7 +35,7 @@
 
 <p><big><strong>Aprile 1840</strong>: nel «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80), comparve <i>Canto a Vignola</i>, un poemetto che il giovane <strong>FRANCESCO SELMI</strong> (1807-1881) aveva scritto per celebrare il suo paese natale.<br>
 L’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi; il terzo e il settimo, invece, sono settenari. Lo schema delle rime è ABcBACdD.</big></p>
- <p><big>Nell’immagine sottostante, l’<i>incipit</i> di <i>Canto a Vignola</i>.</big></p><br>
+ <p><big>Nell’immagine sottostante, l’<i>incipit</i> di <i>Canto a Vignola</i>. Fonte: google.com</big></p><br>
 <img src="img/celebri vignolesi/Selmi/Canto a Vignola.jpg" width="550" height="650"><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Francesco Selmi?<br>Allora, visita il suo <a href="Selmi Francesco.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 
