--- a/Selmi.html
+++ b/Selmi.html
@@ -71,6 +71,247 @@ Nell’ultimo periodo della vita, oltre a dedicarsi a tali impegnative ricerche,
 Selmi morì di setticemia nel paese natale il 13 agosto 1881, in seguito a uno sfortunato incidente avvenuto nel piccolo laboratorio che egli aveva allestito all’interno della stanza da letto del suo villino nel quale era solito passare il periodo estivo. Due giorni dopo, il defunto venne inumato nel locale camposanto. Trascorso qualche tempo, nel nuovo cimitero cittadino (lo stesso attualmente in uso) che si stava creando a poca distanza da quello vecchio per sostituirlo, il Comune mise a disposizione una piccola area destinata a ospitare la cappella funebre dell’illustre personaggio: quest’ultima, inaugurata nel 1901 e tuttora esistente, racchiude il busto realizzato nel medesimo anno dallo scultore maranese Domenico Bernabei e la lapide con l’iscrizione dettata dall’amico Zini.<br>
 Vignola deve molto a questo suo figlio, che le fu per tutta la vita legatissimo: fra l’altro, egli si segnalò come uno dei benemeriti fondatori della Biblioteca Comunale (1871), alla quale donò e fece pervenire numerose opere a stampa; nel 1872 fu uno dei principali animatori delle celebrazioni indette per commemorare, nel suo luogo natale, l’eminente vignolese Lodovico Antonio Muratori, nel secondo centenario della nascita; figurò nel numero dei promotori dell’istituzione della sezione locale della Deputazione di Storia Patria (si trattava della Società Vignolese di Storia Patria e d’Arti Belle, inaugurata nel 1875). Nel suo paese natale, risultano intitolate a Selmi una strada e la suddetta biblioteca, che dal 1996 accoglie buona parte dell’archivio personale del celebre personaggio, donato integralmente al Comune di Vignola dalla famiglia Borsari Bartoli, la quale discende da lui in linea diretta.</big></p><br><br><br>
 
+<h5><big><big><big><big><strong><center>SELMI VERSEGGIATORE</center></strong></big></big></big></big></big></h5><br><br>
+<p><big>Durante l’adolescenza e la prima maturità, Selmi si dedicò non occasionalmente alla composizione di versi, spesso lasciandoli manoscritti.<br>
+Il suo lavoro poetico più noto è senza dubbio quello che egli destinò a celebrare il paese natale: si tratta di <i>Canto a Vignola</i>, uscito nell’aprile 1840 all’interno del «Giornale letterario scientifico modenese» (t. II, n. 7, pp. 77-80). Quest’opera consta di tredici strofe di otto versi ciascuna: il primo, il secondo, il quarto, il quinto e l’ottavo sono endecasillabi, mentre il terzo e il settimo sono settenari; lo schema delle rime è ABcBACdD. Il testo poetico è accompagnato da sette note a piè di pagina esplicative; alla loro compilazione potrebbe aver partecipato l’Autore, a dispetto di quanto si legge nella seconda nota e a dispetto di imprecisioni o errori contenute in altre (limitandoci all’ultima, il celebre medico e veterinario Antonio Alessandrini nacque a Bologna nel 1786 e morì nella stessa città 1861 senza vantare alcun parente originario di Vignola e senza avere mai risieduto in quella località, anche se da ragazzino egli dimorò nella vicina Savignano sul Panaro; pochi anni dopo la pubblicazione di questo poemetto, Selmi maturò rapporti amichevoli e di collaborazione professionale con lui e, poi, con uno dei suoi migliori allievi, il bolognese Giovanni Battista Ercolani [1817-1883], al quale rimase legatissimo per tutto il resto della vita e del quale fu collega all’Ateneo petroniano dal 1867 al 1881, anno della morte del nostro personaggio).<br><br> 
+
+Qui sotto trascriviamo per intero <i>Canto a Vignola,</i> avendo cura di normalizzare gli accenti alle convenzioni tipografiche odierne e di togliere il punto sia dopo il titolo sia dopo il nome del Vignolese in maiuscoletto, alla fine. Nell’originale, la numerazione delle note a piè di pagina ricomincia ogni volta che ha luogo il passaggio alla pagina successiva; nella presente sede, invece, abbiamo preferito adottare una numerazione consecutiva con asterischi dall’inizio alla fine del poemetto, collocando in chiusura tutti i testi delle note.</big></p><br><br>
+
+<p><big><big><big><big><big><center><i>Canto a Vignola</i></center></big></big></big></big></big></p><br><br>
+
+<p><big><i>Salve o terra natal, Vignola mia<br> 
+  
+Alto-turrita, che prospetti l’onda<br> 
+
+Dello Scoltenna e i colli,<br> 
+
+Ch’han sì bella sembianza e sì gioconda!<br> 
+
+Ogn’anima gentil, cortese e pia,<br> 
+ 
+Cui patrio affetto il cor tempri ed ammolli<br> 
+  
+Con me ripeta il grido:<br> 
+  
+Salve o terra natal, mio dolce nido!<br><br> 
+ 
+
+Perché sui campi che d’intorno guardi<br> 
+  
+Spessi metteano e fertili i vigneti<br> 
+  
+Te nomaron Vignola</i> [*];<br> 
+
+<i>Come Italia menò suoi dì lieti,<br> 
+  
+Preda ai lupi voraci e ai feri pardi,<br> 
+  
+Tolta ogni legge e la natìa parola,<br> 
+  
+Che surgessi è membranza<br> 
+  
+D’un italo Barone a fida stanza</i> [**].<br><br> 
+   
+
+<i>Eccelso monumento de’ nostr’avi,<br> 
+  
+Tua rocca siede con suggello in fronte<br> 
+  
+D’alta potenza antica:<br> 
+  
+D’inclito Sire per le cure pronte</i> [***],<br> 
+  
+<i>In tempi meno di ferocia gravi,<br> 
+  
+Crebbe più salda a percossa nemica.<br> 
+  
+Oh! il sire benedetto,<br> 
+  
+Che non atterra, ma rinnalza un tetto.<br><br> 
+   
+
+Io la passeggio taciturno e mesto<br> 
+  
+Quando si copre il ciel d’ammanto nero;<br> 
+  
+E l’alma si commuove:<br> 
+  
+Scorgere mi rassembra il Cavaliero<br> 
+  
+Volare a pugna dall’assalto desto,<br> 
+  
+E co’ gagliardi suoi vincer le prove;<br> 
+  
+Volge conquisa in fuga<br> 
+  
+L’avversa turba, che il terror la fruga.<br><br> 
+   
+
+Poi sento del lïuto l’armonia<br> 
+  
+Che il trovatore al dolce canto sposa;<br> 
+  
+Rapita dal concento<br> 
+  
+L’ascolta già la vergine amorosa,<br> 
+  
+E di quello si bea, di quel che s’india;<br> 
+  
+Le parla al core il dilettoso accento<br> 
+  
+Del prode che l’avvinse,<br> 
+  
+E per lei ruppe lancia e il campo vinse.<br>   
+ 
+Or sui robusti merli e sugli spaldi<br> 
+  
+Svolazza il gufo, e le lucenti sale,<br> 
+  
+U’ s’accolsero a danza,<br> 
+  
+Fra il convitar, gli evviva alterni e i vale,<br> 
+  
+Le vaghe donne ed i guerrieri baldi<br> 
+  
+Stan orrido ricetto a scelleranza;<br> 
+  
+Qui si raccolgon, quivi<br> 
+  
+Coloro che vanno per misfar captivi</i> [****].<br><br>  
+
+<i>Mi rissovengon tue sventure acerbe,<br> 
+  
+O cara patria e strignemi pietate.<br> 
+  
+Quante volte in ruina<br> 
+  
+Precipitâr le tue mura scrollate!<br> 
+  
+S’altri a ristauro più l’ergea superbe,<br> 
+  
+A danni lor Bologna la vicina</i> [*****]<br> 
+  
+<i>Poderosa affrettava<br> 
+  
+E novamente ad isfacel le dava.<br><br> 
+   
+
+Ed Enzo Re</i> [******] <i>poscia lanciando il fuoco<br> 
+  
+Sulle tue case, ardesti tutta in vampo.<br> 
+  
+T’angosciaron le strida<br> 
+  
+E il macello de’ tuoi, tolto ogni scampo:<br> 
+  
+De’ pargoli sentisti il pianto roco<br> 
+  
+Cessare ai colpi del fero omicida,<br> 
+  
+E da te pur s’intese,<br> 
+  
+Ch’eran tue donne orribilmente offese.<br><br> 
+   
+
+Né cogli anni lasciò la ria ventura<br> 
+  
+Di farti segno a’ suoi crudeli scempi,<br> 
+  
+Né la calunnia odiata:<br> 
+  
+Maledizion maledizione agli empi<br> 
+  
+Nemici tuoi, che di vergine pura<br> 
+  
+E d’ogni sozza labe immacolata,<br> 
+  
+Te disser vile e astuta<br> 
+  
+Di brago aspersa ed in bordel vissuta.<br><br> 
+   
+
+Fierissimo dolor! Qual fia conforto?<br> 
+  
+Oh! dei sommi tuoi figli la memoria!</i> [*******]<br> 
+  
+<i>Cielo e terren lor desti;<br> 
+
+E n’hai già in guiderdone eterna gloria.<br> 
+  
+Ma un novo raggio nel tuo fronte è scorto?<br> 
+  
+Scuotiti a gioja dai pensier molesti;<br> 
+  
+Su via levati e mira,<br> 
+  
+Ecco l’italo genio che t’inspira.<br>   
+ 
+Come il prode che vinto nella sfida<br> 
+  
+Da fraude sì non da virtù nemica,<br> 
+  
+Se pur si racconsola<br> 
+  
+A primiero valore, a fama antica,<br> 
+  
+In nove pugne anco un ristoro affida;<br> 
+  
+Così nel duol che t’ange o mia Vignola<br> 
+  
+Ti sia caro sostegno<br> 
+  
+De’ tuoi garzoni anco il possente ingegno.<br><br> 
+   
+ 
+Crebbero sì, su questo suol, spirato<br> 
+  
+Hanno il purissimo aëre dei colli.<br> 
+  
+Coll’opre dei grand’avi<br> 
+  
+D’essi le menti ad alto volo estolli.<br> 
+  
+Quando Ausonia a lor plauda d’ogni lato,<br> 
+  
+Qual gioja fia la tua, quai dì soavi!<br> 
+  
+Oh! qual giocondo evviva<br> 
+  
+S’udrà echeggiar su tua festante riva.<br><br> 
+   
+
+Salve salve o Vignola, dolce stanza<br> 
+  
+De’ miei primi anni; a te fu sciolto il canto,<br> 
+  
+E il suon della mia lira;<br> 
+  
+A te i sospiri, a te il lugubre pianto,<br> 
+  
+E il desïar senz’ombra di speranza<br> 
+  
+Di questa accesa fantasia delira.<br> 
+  
+Salve, ed il mio saluto<br> 
+ 
+Di nova luce non ti torni muto.</i></big></p><br><br>   
+
+<p><big><big><center>FRANCESCO SELMI</center></big></big></p><br><br><br>
+
+<p><big>[*] Le bellissime colline che ora declinando a valle ora sollevandosi a cima s’avvicendano maravigliosamente, formando nel contorno del castello di Vignola una specie d’anfiteatro, furono anticamente coltivate a vigna. Dalle quali vignette o vineolae o viniolae (in latino barbaro) venne il nome di Vignola. Un antico autore l’appellò Neviola, ma sembra nome corrotto da Viniola; al che ci conforta l’osservazione, che l’arme di Vignola si compone d’una vite con grappoli maturi sostenuta da un palo, in campo turchino, secondo il Belloi cronista vignolese.<br><br>  
+
+[**] La prima memoria certa ch’abbiasi di Vignola è dell’anno 826. Nell’anno 936 essa era già forte castello. Le tenebre nella quale s’avvolge la fondazione di lei hanno permesso all’autore d’imaginarla in uno di quegli avvenimenti, che nel più cupo del medio evo per le barbariche inondazioni, dovevano tornare più frequenti.<br><br>  
+
+[***] È questi Ambrogio Contrario, il quale nell’anno 1473, essendo Signore di Vignola, ne ampliò e ristaurò la rocca, edificò molta parte del castello ed abbellì le case e le contrade. Belloi nella sua cronica riferisce cotal fatto, e lo esalta con magnifiche lodi.<br><br>  
+
+[****] Molte stanze della rocca sono state convertite ad uso di prigione.<br><br>  
+
+[*****] I Bolognesi nel lasso di tempo d’undici anni, per due volte espugnarono il castello di Vignola, cioè nel 1228, essendo capitanati dal conte Alberto da Mangone, poscia (avendolo già restituito in tal frattempo ai Modenesi) il ripresero a viva forza nel 1239.<br><br>  
+
+[******] Nell’anno 1247 Enzo Re, movendo colla sua oste contro i fuorusciti Modenesi, nelle mani de’ quali era il castello di Vignola, quivi trasse, e quivi appiccò le fiamme, onde arse interamente.<br><br>  
+
+[*******] Fra i passati, basti accennare un Barozzi, un Cantelli, un Muratori, ed un Soli; fra i viventi, valga nominare il ch. prof. Antonio Alessandrini decoro dell’Università Bolognese e d’Italia tutta.<br></big></p><br><br><br>	
+
 <h5><big><big><big><big><strong><center>SELMI NARRATORE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Selmi si cimentò con impegno in diversi settori. Stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».</big></p><br>
 
